--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy>=1.21.0
 scipy>=1.7.0
-opencv-python>=4.6.0
+opencv-python-headless>=4.6.0
 scikit-image>=0.19.0
 streamlit>=1.28.0
 pillow>=8.0.0
